; ModuleID = '/home/carl/AnghaBench/reactos/base/applications/calc/extr_winmain.c_SaveRegInt.c'
source_filename = "/home/carl/AnghaBench/reactos/base/applications/calc/extr_winmain.c_SaveRegInt.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@HKEY_CURRENT_USER = common dso_local global i32 0, align 4
@REG_OPTION_NON_VOLATILE = common dso_local global i32 0, align 4
@KEY_SET_VALUE = common dso_local global i32 0, align 4
@ERROR_SUCCESS = common dso_local global i64 0, align 8
@REG_DWORD = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32, i32, i32)* @SaveRegInt to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @SaveRegInt(i32 %0, i32 %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  store i32 %0, i32* %4, align 4
  store i32 %1, i32* %5, align 4
  store i32 %2, i32* %6, align 4
  %8 = load i32, i32* @HKEY_CURRENT_USER, align 4
  %9 = load i32, i32* %4, align 4
  %10 = load i32, i32* @REG_OPTION_NON_VOLATILE, align 4
  %11 = load i32, i32* @KEY_SET_VALUE, align 4
  %12 = call i64 @RegCreateKeyEx(i32 %8, i32 %9, i32 0, i32* null, i32 %10, i32 %11, i32* null, i32* %7, i32* null)
  %13 = load i64, i64* @ERROR_SUCCESS, align 8
  %14 = icmp eq i64 %12, %13
  br i1 %14, label %15, label %22

15:                                               ; preds = %3
  %16 = load i32, i32* %7, align 4
  %17 = load i32, i32* %5, align 4
  %18 = load i32, i32* @REG_DWORD, align 4
  %19 = call i32 @RegSetValueEx(i32 %16, i32 %17, i32 0, i32 %18, i32* %6, i32 4)
  %20 = load i32, i32* %7, align 4
  %21 = call i32 @RegCloseKey(i32 %20)
  br label %22

22:                                               ; preds = %15, %3
  ret void
}

declare dso_local i64 @RegCreateKeyEx(i32, i32, i32, i32*, i32, i32, i32*, i32*, i32*) #1

declare dso_local i32 @RegSetValueEx(i32, i32, i32, i32, i32*, i32) #1

declare dso_local i32 @RegCloseKey(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
